Fixed overflow in popovers

--- a/wcfsetup/install/files/style/ui/popover.scss
+++ b/wcfsetup/install/files/style/ui/popover.scss
@@ -42,10 +42,13 @@
 	background-color: $wcfContentBackground;
 	border-radius: 3px;
 	color: $wcfContentText;
-	max-height: 320px;
-	min-height: 36px;
-	overflow: hidden;
 	padding: 15px;
+	
+	> div {
+		max-height: 290px;
+		min-height: 36px;
+		overflow: hidden;
+	}
 	
 	a {
 		color: $wcfContentLink;
